make changes to workflow yaml

--- a/.codecatalyst/workflows/Workflow_2922.yaml
+++ b/.codecatalyst/workflows/Workflow_2922.yaml
@@ -28,5 +28,6 @@ Actions:
       # Required - Steps are sequential instructions that run shell commands
       Steps:
         - Run: echo "Hello, World!"
+        - Run: echo "Second Line!"
     Compute:
       Type: EC2
