--- a/.codecatalyst/workflows/Workflow_2922.yaml
+++ b/.codecatalyst/workflows/Workflow_2922.yaml
@@ -31,6 +31,6 @@ Actions:
       Steps:
         - Run: echo "Hello, World!"
         - Run: echo "Second Line!"
-        - Run: test
+        - Run: test234
     Compute:
       Type: EC2
