--- a/.codecatalyst/workflows/Workflow_2922.yaml
+++ b/.codecatalyst/workflows/Workflow_2922.yaml
@@ -31,5 +31,6 @@ Actions:
       Steps:
         - Run: echo "Hello, World!"
         - Run: echo "Second Line!"
+        - Run: blahblahblah
     Compute:
       Type: EC2
